<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edt"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edt"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edt"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:text="" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up_hint"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginBottom="60dp"/>
    </LinearLayout>
</ScrollView>

